--- a/css/style.css
+++ b/css/style.css
@@ -830,6 +830,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 /*** training Start ***/
 .training .training-item .training-inner {
     position: relative;
+    max-height: 350px;
 }
 
 .training .training-item .training-inner .training-title-name {
