--- a/css/style.css
+++ b/css/style.css
@@ -331,6 +331,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 
     .navbar-light .navbar-brand img {
         max-height: 45px;
+        max-width: 200px;
     }
 }
 
