--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,9 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 .cPx-3 {
     padding: 0 10px;
 }
+.navbar-expand-lg .navbar-nav .dropdown-menu {
+    left: -60px;
+}
 
 
 /*** Spinner Start ***/
