--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,9 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 .facbookColor {
     color: #0866ff;
 }
+.linkedinColor {
+    color: #0a66c2;
+}
 .instagramColor {
     color: #b44b8f;
 }
