--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,22 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     font-size: x-large;
 }
 
+.whatsapp {
+    position: fixed;
+    bottom: 100px;
+    right: 33px;
+    width: 50px;
+    height: 50px;
+    background-color: #25d366;
+    padding: 8px 5px 0;
+    text-align: center;
+    border-radius: 10px;
+    z-index: 100;
+}
+.whatsapp svg {
+    width: 30px;
+    color: #FFF;
+}
 
 
 /*** Spinner Start ***/
