--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,27 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     color: #FFF;
 }
 
+.watermark {
+    position: relative;
+}
+.watermark:before {
+    content: '';
+    position: absolute;
+    left: -10%;
+    top: 0;
+    background: url('../img/brand-logo.png') no-repeat;
+    background-position: center;
+    background-size: contain;
+    transform: rotate(5deg);
+    width: 100%;
+    height: 100%;
+    opacity: .1;
+}
+.watermark > div {
+    position: relative;
+    z-index: 1;
+}
+
 
 /*** Spinner Start ***/
 /*** Spinner ***/
