--- a/css/style.css
+++ b/css/style.css
@@ -118,23 +118,31 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 
 .watermark {
     position: relative;
+    overflow: hidden;
 }
-.watermark:before {
+.watermark::before {
     content: '';
     position: absolute;
-    left: -10%;
-    top: 0;
-    background: url('../img/brand-logo.png') no-repeat;
+    left: 20%;
+    top: -35%;
+    background: url('../img/watermark.svg') no-repeat;
     background-position: center;
     background-size: contain;
-    transform: rotate(5deg);
+    transform: rotate(-20deg);
     width: 100%;
     height: 100%;
-    opacity: .1;
+    opacity: .5;
+    filter: invert(50%);
 }
 .watermark > div {
     position: relative;
     z-index: 1;
+}
+.watermark.left::before {
+    left: auto;
+    right: 10%;
+    top: -10%;
+    filter: invert(0);
 }
 
 
