--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 .alignContent {
     display: flex;
     align-items: flex-start;
+    color: var(--bs-white);
 }
 .alignContent i {
     margin-top: 7px;
@@ -125,16 +126,16 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 .watermark::before {
     content: '';
     position: absolute;
-    left: 20%;
-    top: 0;
-    background: url('../img/watermark.svg') repeat;
+    right: -380px;
+    bottom: 40px;
+    background: url('../img/watermark.svg') no-repeat;
     background-position: center;
     background-size: contain;
-    transform: rotate(-20deg);
+    transform: rotate(-10deg);
     width: 100%;
     height: 100%;
     opacity: .5;
-    filter: invert(50%);
+    /* filter: invert(50%); */
 }
 .watermark > div {
     position: relative;
@@ -601,6 +602,10 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     }
     .py-sm-0 {
         padding: 0 !important;
+    }
+    .watermark::before {
+        right: 0px;
+        top: 330px;
     }
 }
 /*** Carousel Hero Header End ***/
