--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,49 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     filter: invert(0);
 }
 
+.watermarkGray {
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+}
+.watermarkGray::before {
+    content: '';
+    position: absolute;
+    right: 0px;
+    bottom: 40px;
+    background: url('../img/watermark.svg') no-repeat;
+    background-position: center;
+    background-size: contain;
+    transform: rotate(-10deg);
+    width: 100%;
+    height: 100%;
+    opacity: .5;
+    filter: invert(50%);
+}
+
+.watermarkBig {
+    position: relative;
+    overflow: hidden;
+    margin: 0;
+}
+.watermarkBig::before {
+    content: '';
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    left: 0;
+    top: 0;
+    background: url('../img/watermark.svg') no-repeat;
+    background-position: center;
+    background-size: contain;
+    transform: rotate(-10deg);
+    width: 100%;
+    height: 100%;
+    opacity: .5;
+    filter: invert(50%);
+    margin: auto;
+}
+
 
 /*** Spinner Start ***/
 /*** Spinner ***/
@@ -605,7 +648,13 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
     }
     .watermark::before {
         right: 0px;
-        top: 330px;
+        top: 220px;
+    }
+    .watermarkGray::before {
+        bottom: 300px;
+    }
+    .watermarkBig::before {
+        bottom: 300px;
     }
 }
 /*** Carousel Hero Header End ***/
