css update for breadcrumb

--- a/css/style.css
+++ b/css/style.css
@@ -543,7 +543,16 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 
 /*** Single Page Hero Header Start ***/
 .bg-breadcrumb {
-    background: linear-gradient(rgba(0, 58, 102, 0.9), rgba(0, 58, 102, 0.8)), url(../img/breadcrumb.png);
+    background: linear-gradient(rgba(0, 58, 102, 0.2), rgba(0, 58, 102, 0.8)), url(../img/breadcrumb.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: initial;
+    background-size: cover;
+    padding: 30px 0 30px 0;
+    max-height: 250px;
+}
+.bg-breadcrumb1 {
+    background: linear-gradient(rgba(0, 58, 102, 0.9), rgba(0, 58, 102, 0.2)), url(../img/breadcrumb1.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: initial;
