--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,5 +26,31 @@
   </head>
   <body>
     <slot />
+
+    <!-- JavaScript Libraries -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/counterup/counterup.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script> -->
+
+    <!--Modal JS Script -->
+    <script type="text/javascript">
+      window.onload = () => {
+        // Initialize the modal with options to disable overlay click and Esc key close
+        const myModal = new bootstrap.Modal("#onload", {
+          backdrop: "static", // Prevent closing on overlay click
+          keyboard: false     // Prevent closing on pressing the Esc key
+        });
+
+        // Show the modal
+        myModal.show();
+      };
+    </script>
+
+    <!-- Template Javascript -->
+  <!-- <script src="js/main.js"></script> -->
   </body>
 </html>
