--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header';
 import Layout from '../layouts/Layout.astro';
+import LatestNews from '../components/LatestNews';
 // import TopBar from '../components/TopBar.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -9,4 +10,5 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 	<Header />
+	<LatestNews />
 </Layout>
