--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Header from '../components/Header';
 import Layout from '../layouts/Layout.astro';
 import LatestNews from '../components/LatestNews';
-// import TopBar from '../components/TopBar.astro';
+import About from '../components/About';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -11,4 +11,5 @@ import LatestNews from '../components/LatestNews';
 <Layout>
 	<Header />
 	<LatestNews />
+	<About />
 </Layout>
